[tool.poetry]
name = "tor_database_scraper"
version = "0.1.0"
description = ""
authors = ["Tim Jentzsch <tim-jentzsch@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
